insert view showing the Breweries
